--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 			text-align: center;
 		}
 		body{
-			background-image: url("https://wallpapers.com/images/hd/batman-laptop-uddnlal1331t5bp0.jpg");
+			background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb2TcbLGKJeeZptotM20DT1XrFbI0O4y0mmQ&s");
 			width: 100%;
 			height: 100vh;
-			background-size: cover;
+			background-size: 95%;
 			color: ;
 		}
 		form{
@@ -87,6 +87,9 @@ if (email==="eber@email.com" && password==="123"){
 	window.location.href="https://isabelamaldonado2025lcm-droid.github.io/proyecto1/";
 }
 if (email==="isabela@email.com" && password==="123"){
+	window.location.href="https://isabelamaldonado2025lcm-droid.github.io/proyecto1/";
+}
+if (email==="LCM@email.com" && password==="123"){
 	window.location.href="https://isabelamaldonado2025lcm-droid.github.io/proyecto1/";
 }
 else{
