--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<div class="container">
 		<form id="loginForm">
 			<h1>PÁGINA DE ACCESO</h1>
-			<h1>Isabela Maldonado</h1>
+			</h1> Liceo Compu-Market</h1>
 			<br>
 			<div class="mb-3">
 				<label for="email">Usuario</label>
