--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<div class="container">
 		<form id="loginForm">
 			<h1>PÁGINA DE ACCESO</h1>
-			</h1> Liceo Compu-Market</h1>
+			</h1> Mi Pasaporte al exito </h1>
 			<br>
 			<div class="mb-3">
 				<label for="email">Usuario</label>
@@ -89,7 +89,7 @@ if (email==="eber@email.com" && password==="123"){
 if (email==="isabela@email.com" && password==="123"){
 	window.location.href="https://isabelamaldonado2025lcm-droid.github.io/proyecto1/";
 }
-if (email==="LCM@email.com" && password==="123"){
+if (email==="lcm@email.com" && password==="123"){
 	window.location.href="https://isabelamaldonado2025lcm-droid.github.io/proyecto1/";
 }
 else{
